# open5gs

./: .gitmodules  clean5g.sh  start5g.sh  stop5g.sh
lib/: meson.build
lib/crypt/: meson.build  ogs-crypt.h  ogs-kdf.c  ogs-kdf.h  ogs-prf.c  ogs-prf.h  ogs-sha2-hmac.c
lib/dbi/: subscription.c  subscription.h
lib/eap/: eap.c  eap.h  meson.build
lib/eap/oqs/: oqsconfig.h
lib/kmu/: kmu.h  meson.build
lib/kmu/crypt/: curve25519_donna.c  curve25519_donna.h  kmu_base64.c  kmu_base64.h  kmu_common.c  kmu_common.h  kmu_kdf.c  kmu_kdf.h  kmu_sha2.c  kmu_sha2.h  kmu_sha2_hmac.c  kmu_sha2_hmac.h  meson.build
lib/kmu/eap/: kmu_eap.c  kmu_eap.h  meson.build
lib/kmu/eap_aka/: kmu_eap_aka_prime.c  kmu_eap_aka_prime.h  meson.build
lib/kmu/oqs/: aes.h  aes_ops.h  common.h  kem.h  kem_ml_kem.h  oqs.h  rand.h  sha2.h  sha2_ops.h  sha3.h  sha3_ops.h  sha3x4.h  sha3x4_ops.h  sig.h  sig_stfl.h
lib/oqs/: meson.build
lib/proto/: types.h
lib/sbi/: conv.c  conv.h  message.c  message.h  ogs-sbi.h
lib/sbi/openapi/model/: ue_authentication_ctx_5g_auth_data.c  ue_authentication_ctx_5g_auth_data.h
src/amf/: context.h  gmm-build.c  gmm-build.h  gmm-handler.c  gmm-sm.c  metrics.c  metrics.h  nas-path.c  nas-path.h  nausf-build.c  nausf-build.h  nausf-handler.c  nausf-handler.h
src/ausf/: ausf-sm.c  context.h  meson.build  nausf-handler.c  nausf-handler.h  nudm-handler.c  nudm-handler.h  ue-sm.c
src/udm/: context.c  context.h  meson.build  nudm-handler.c  nudr-handler.c
src/udr/: nudr-handler.c
webui/server/: index.js
